feat: update shell and remote

--- a/apps/remote/project.json
+++ b/apps/remote/project.json
@@ -12,21 +12,15 @@
         "outputPath": "dist/apps/remote",
         "index": "apps/remote/src/index.html",
         "baseHref": "/",
-        "main": "apps/remote/src/main.tsx",
+        "main": "apps/remote/src/index.ts",
         "polyfills": "apps/remote/src/polyfills.ts",
         "tsConfig": "apps/remote/tsconfig.app.json",
         "assets": ["apps/remote/src/favicon.ico", "apps/remote/src/assets"],
         "styles": ["apps/remote/src/styles.css"],
         "scripts": [],
-        "webpackConfig": "@nrwl/react/plugins/webpack"
+        "webpackConfig": "apps/remote/webpack.config.js"
       },
       "configurations": {
-        "development": {
-          "extractLicenses": false,
-          "optimization": false,
-          "sourceMap": true,
-          "vendorChunk": true
-        },
         "production": {
           "fileReplacements": [
             {
@@ -45,15 +39,11 @@
     },
     "serve": {
       "executor": "@nrwl/web:dev-server",
-      "defaultConfiguration": "development",
       "options": {
         "buildTarget": "remote:build",
         "hmr": true
       },
       "configurations": {
-        "development": {
-          "buildTarget": "remote:build:development"
-        },
         "production": {
           "buildTarget": "remote:build:production",
           "hmr": false
