--- a/apps/shell/project.json
+++ b/apps/shell/project.json
@@ -12,21 +12,15 @@
         "outputPath": "dist/apps/shell",
         "index": "apps/shell/src/index.html",
         "baseHref": "/",
-        "main": "apps/shell/src/main.tsx",
+        "main": "apps/shell/src/index.ts",
         "polyfills": "apps/shell/src/polyfills.ts",
         "tsConfig": "apps/shell/tsconfig.app.json",
         "assets": ["apps/shell/src/favicon.ico", "apps/shell/src/assets"],
         "styles": ["apps/shell/src/styles.css"],
         "scripts": [],
-        "webpackConfig": "@nrwl/react/plugins/webpack"
+        "webpackConfig": "apps/shell/webpack.config.js"
       },
       "configurations": {
-        "development": {
-          "extractLicenses": false,
-          "optimization": false,
-          "sourceMap": true,
-          "vendorChunk": true
-        },
         "production": {
           "fileReplacements": [
             {
@@ -45,15 +39,11 @@
     },
     "serve": {
       "executor": "@nrwl/web:dev-server",
-      "defaultConfiguration": "development",
       "options": {
         "buildTarget": "shell:build",
-        "hmr": true
+        "hmr": false
       },
       "configurations": {
-        "development": {
-          "buildTarget": "shell:build:development"
-        },
         "production": {
           "buildTarget": "shell:build:production",
           "hmr": false
